Added .csv support
Implemented loading decks through .csv files, created a .csv file to generate decks from and added basic blocks to implement element blockage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
     ],
-    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${profileName}${separator}${appName}"
+    "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${profileName}${separator}${appName}",
+    "cSpell.words": [
+        "EFFECTTYPE"
+    ]
 }
